--- a/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
@@ -204,7 +204,7 @@
             else if (ClonecheckInstance() == false)
             {
                 // $("#lblInstance1").html("Please re-enter the Instance ").show().fadeOut(5000);
-                Notiflix.Notify.Failure('Please re-enter the Instance', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                Notiflix.Notify.Failure('Instance is already in use', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
 
             }
             else if (Project == 0) {
